--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -1,5 +1,5 @@
 FROM fusuf/whatsasena:latest
-RUN git clone https://github.com/X-Electra/X-Asena.git /xasena
+RUN git clone https://github.com/Jackz-ser/X-Asena.git /xasena
 WORKDIR /xasena
 RUN npm install
 CMD ["node", "bot.js"] 
