--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -2,4 +2,4 @@ FROM fusuf/whatsasena:latest
 RUN git clone https://github.com/Jackz-ser/X-Asena /xasena
 WORKDIR /xasena
 RUN npm install
-CMD ["node", "index.js"] 
+CMD ["node", "bot.js"] 
